correct error on mobile

--- a/_scss/_custom.scss
+++ b/_scss/_custom.scss
@@ -493,6 +493,7 @@ a:hover{
 
 .bgplyer{
   height: 100vh;
+  width: auto;
   background: no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -500,6 +501,16 @@ a:hover{
   background-size: cover;
 }
 
+@media only screen and (max-width: 400px) {
+   .bgplyer{
+    width: 100%;
+    max-height: 100%; /* To compensate for mobile browser address bar space */ 
+    background-size: fill;        
+    -webkit-background-size: fill; 
+    -moz-background-size: fill ; 
+    -o-background-size: fill; 
+    }
+}
 
 
 // ITEM
